Corrected headings on two recipes

--- a/recipes/nobakecookies.html
+++ b/recipes/nobakecookies.html
@@ -1,4 +1,4 @@
-<h1>Lasagna Recipe</h1>
+<h1>No Bake Cookies Recipe</h1>
 <img src="img/cookies.jpeg" alt="A pan of delicious no bake cookies">
 <h2>A fun and easy no bake cookie</h2>
 <p>Many no bake cookies recipes are quite similar. Most call for some variation on the following ingredients: sugar, milk, butter or margarine, cocoa powder, peanut butter, vanilla extract and oatmeal. Some additions to the cookies could include chocolate chips, nuts, raisins or honey.</p>
