--- a/recipes/macaroni.html
+++ b/recipes/macaroni.html
@@ -1,4 +1,4 @@
-<h1>Lasagna Recipe</h1>
+<h1>Macaroni Recipe</h1>
 <img src="img/mac.webp" alt="A blob of delicious macaroni and cheese">
 <h2>Everybodys favorite macaroni and cheese</h2>
 <p>a dish of pasta and cheese sauce, traditionally using macaroni and cheddar, baked in a casserole or sometimes cooked on a stovetop.</p>
