--- a/index.html
+++ b/index.html
@@ -4,15 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <title>Odin Recipes</title>
 </head>
 <body>
     <h1>Odin Recipes</h1>
     <h2>Bone Apple Teeth</h2>
-    <ul>
-        <li><a href="recipes/lasagna.html">Lasagna Recipe</a></li>
-        <li><a href="recipes/nobakecookies.html">No-Bake Cookies Recipe</a></li>
-        <li><a href="recipes/macaroni.html">Macaroni Recipe</a></li>
-    </ul>
+    <div class="list">
+        <ul>
+            <li><a href="recipes/lasagna.html">Lasagna Recipe</a></li>
+            <li><a href="recipes/nobakecookies.html">No-Bake Cookies Recipe</a></li>
+            <li><a href="recipes/macaroni.html">Macaroni Recipe</a></li>
+        </ul>
+    </div>
 </body>
 </html>
