--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -1,3 +1,16 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
+    <title>Lasagna Recipe</title>
+</head>
+<body>
+    
+</body>
+</html>
 <h1>Lasagna Recipe</h1>
 <img src="img/lasagna2.webp" alt="A delicious slice of lasagna">
 <h2>A famous baked Italian dish</h2>
