--- a/recipes/macaroni.html
+++ b/recipes/macaroni.html
@@ -1,3 +1,16 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
+    <title>Macaroni and Cheese Recipe</title>
+</head>
+<body>
+    
+</body>
+</html>
 <h1>Macaroni Recipe</h1>
 <img src="img/mac.webp" alt="A blob of delicious macaroni and cheese">
 <h2>Everybodys favorite macaroni and cheese</h2>
