--- a/recipes/nobakecookies.html
+++ b/recipes/nobakecookies.html
@@ -1,3 +1,16 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
+    <title>No Bake Cookies Recipe</title>
+</head>
+<body>
+    
+</body>
+</html>
 <h1>No Bake Cookies Recipe</h1>
 <img src="img/cookies.jpeg" alt="A pan of delicious no bake cookies">
 <h2>A fun and easy no bake cookie</h2>
